--- a/index.html
+++ b/index.html
@@ -825,9 +825,9 @@ Author URL: http://w3layouts.com
         <!-- copyright -->
         <section class="w3l-copyright text-center">
             <div class="container">
-                <p class="copy-footer-29">© 2021 Foodie Blog. All rights reserved. Design by <a
+                <p class="copy-footer-29">© 2022 Foodie Blog. All rights reserved. Design by <a
                         href="https://w3layouts.com/" target="_blank">
-                        W3Layouts</a></p>
+                        Sonam</a></p>
             </div>
         </section>
         <!-- //copyright -->
